--- a/FootballMatchPredictor/Views/Bet/WithdrawingMoney.cshtml
+++ b/FootballMatchPredictor/Views/Bet/WithdrawingMoney.cshtml
@@ -1,13 +1,14 @@
-﻿@using FootballMatchPredictor.Domain.Enums
-@using FootballMatchPredictor.Domain.Extensions
-@using FootballMatchPredictor.Domain.ViewModels.UserProfile
+﻿@using FootballMatchPredictor.Domain.ViewModels.Bet
+
 @model WithdrawingMoneyViewModel
 
 
 <div class="container">
     <form id="withdrawingForm">
         <div class="form-group row my-3">
-            Количество ваших средств: @Model.WinningSum ₽
+            <p class="text-center">
+                Количество ваших средств: @Model.WinningSum ₽
+            </p>
         </div>
         <div class="form-group row my-3">
             <div class="col-md-2 pt-2">
@@ -22,19 +23,19 @@
                 <label asp-for="PaymentMethod">Платёжный метод</label>
             </div>
             <div class="col-sm-10 ps-4">
-                <select class="form-select" asp-for="PaymentMethod">
-                    @foreach (PaymentMethod paymentMethod in Enum.GetValues(typeof(PaymentMethod)))
-                    {
-                        <option value="@paymentMethod">
-                            @paymentMethod.GetDisplayName()
-                        </option>
-                    }
+                <select class="form-control" id="paymentMethodId" asp-for="PaymentMethod" data-minimum-results-for-search="Infinity" style="width:100%;">
                 </select>
             </div>
         </div>
         <button type="button" class="btn btn-primary mt-3"
-                onclick="doActionWithPopupWindow(event, { url: '/UserProfile/WithdrawingMoney', formId: 'withdrawingForm' })">
+                onclick="doActionWithPopupWindow(event, { url: '/Bet/WithdrawingMoney', formId: 'withdrawingForm' })">
             Вывести денежные средства
         </button>
     </form>
 </div>
+
+
+<script>
+    initSelect2ForEnum({ url: '/Bet/GetPaymentMethods', selectId: 'paymentMethodId', placeholder: 'Выберите платёжный метод', isModal: true });
+</script>
+
