--- a/FootballMatchPredictor/wwwroot/css/site.css
+++ b/FootballMatchPredictor/wwwroot/css/site.css
@@ -77,6 +77,29 @@ body {
     border-radius: 40px;
 }
 
+.select2-selection__rendered {
+    line-height: 38px !important;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.select2-container .select2-selection--single {
+    height: 38px !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 36px !important; /* Высота стрелки может отличаться на 2 пикселя меньше */
+}
+
 .all-unset {
     all: unset;
+}
+
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
+    background-color: #0d6efd !important;
+}
+
+.coefficient-image {
+    background-image: url(/images/cofficients-page-default-pic.jpg);
+    background-size: cover;
 }
