Обновил маппинг в сервисах, создал кастомные маппинги

--- a/FootballMatchPredictor/Views/Coefficient/GetMatchCoefficients.cshtml
+++ b/FootballMatchPredictor/Views/Coefficient/GetMatchCoefficients.cshtml
@@ -18,7 +18,7 @@
         <div class="col-md-2 my-auto">
             <p class="fs-3 fw-bolder text-center text-white">Матч</p>
             <img class="img-fluid" src="~/images/crossed-sword-coefficient-page-pic.png"/>
-            <p class="fs-5 fw-bolder text-center">
+            <p class="fs-5 fw-bolder text-center text-white">
                 @Model.First().MatchDate
             </p>
         </div>
