--- a/FootballMatchPredictor/Views/UserProfile/GetUserProfile.cshtml
+++ b/FootballMatchPredictor/Views/UserProfile/GetUserProfile.cshtml
@@ -98,7 +98,7 @@
                             </div>
                             <div class="col-sm-11 ps-4">
                                 <select class="form-control" id="userGenderId" data-minimum-results-for-search="Infinity" asp-for="Gender">
-                                    <option value="@Model.Gender">@Model.Gender</option>
+                                    <option>@Model.Gender</option>
                                 </select>
                             </div>
                         </div>
