--- a/FootballMatchPredictor/Views/Home/Index.cshtml
+++ b/FootballMatchPredictor/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="col-md-2">
         </div>
         <div class="col-md-4 col-sm-12 lh-base">
-            <h1 class="text-white" style="margin-top:175px; font-size:50px;">
+            <h1 class="text-white" style="margin-top:145px; font-size:50px;">
                 Лучшие ставки<br /> на футбольные матчи
             </h1>
             <p class="fs-5 text-white my-5">
@@ -16,6 +16,9 @@
             <p class="fs-5 text-white my-5">
                 Наша команда экспертов по футболу следит за всеми актуальными новостями и анализирует каждый матч, чтобы помочь вам сделать правильные ставки.
                 Присоединяйтесь к нам сегодня и испытайте удачу вместе с нами!
+            </p>
+            <p class="fs-5 text-white my-5">
+                <b>Акция!</b> При регистрации и каждый месяц, первого числа ваш баланс будет пополняться на 1000 рублей!!!
             </p>
         </div>
         <div class="col-md-4 col-sm-12 br-40">
