--- a/FootballMatchPredictor/Views/Auth/Register.cshtml
+++ b/FootballMatchPredictor/Views/Auth/Register.cshtml
@@ -5,32 +5,40 @@
     <div class="row">
         <div class="col-md-12">
             <form id="registerForm">
-                <div class="mb-3">
+                <div class="form-group mb-3">
                     <label for="exampleInputEmail1" class="form-label">Логин пользователя</label>
                     <input type="text" class="form-control" asp-for="Username" aria-describedby="emailHelp">
                     <div id="emailHelp" class="form-text">Мы никогда не делимся вашей почтой с кем то ещё.</div>
                 </div>
-                <div class="mb-3">
+                <div class="form-group mb-3">
                     <label for="exampleInputPassword1" class="form-label">Почта</label>
                     <input type="email" asp-for="Email" class="form-control" id="exampleInputPassword1">
                 </div>
-                <div class="mb-3">
+                <div class="form-group mb-3">
                     <label for="exampleInputEmail1" class="form-label">Имя пользователя</label>
                     <input type="text" class="form-control" asp-for="FirstName" aria-describedby="emailHelp">
                     <div id="emailHelp" class="form-text">Мы никогда не делимся вашей почтой с кем то ещё.</div>
                 </div>
-                <div class="mb-3">
+                <div class="form-group mb-3">
                     <label for="exampleInputEmail1" class="form-label">Фамилия пользователя</label>
                     <input type="text" class="form-control" asp-for="SurName" aria-describedby="emailHelp">
                     <div id="emailHelp" class="form-text">Мы никогда не делимся вашей почтой с кем то ещё.</div>
                 </div>
-                <div class="mb-3">
+                <div class="form-group mb-3">
                     <label for="exampleInputPassword1" class="form-label">Пароль</label>
                     <input type="password" asp-for="Password" class="form-control" id="exampleInputPassword1">
                 </div>
-                <div class="mb-3">
+                <div class="form-group mb-3">
                     <label for="exampleInputPassword1" class="form-label">Подтвердите пароль</label>
                     <input type="password" asp-for="PasswordConfirm" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Gender" class="form-label">Выберите пол</label>
+                    <select asp-for="Gender" class="form-control" id="genderRegisterSelectId" data-minimum-results-for-search="Infinity" style="width:100%;">
+                    </select>
+                    <div class="form-text">
+                        Вы должны выбрать способ платежа
+                    </div>
                 </div>
                 <button type="button" class="btn  bg-indigo text-white" style="height:40px;"
                         onclick="doActionWithPopupWindow(event, { url: '/Auth/Register', formId: 'registerForm' })">
@@ -40,3 +48,7 @@
         </div>
     </div>
 </div>
+
+<script>
+    initSelect2ForEnum({ url: '/UserProfile/GetGenders', selectId: 'genderRegisterSelectId', placeholder: 'Выберите пол', isModal: true });
+</script>
