--- a/FootballMatchPredictor/Views/Bet/MakeBet.cshtml
+++ b/FootballMatchPredictor/Views/Bet/MakeBet.cshtml
@@ -14,7 +14,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MoneyAmount" class="form-label">Способ платежа</label>
+                    <label asp-for="PaymentMethod" class="form-label">Способ платежа</label>
                     <select asp-for="PaymentMethod" class="form-control" id="paymentMethodToBetId" data-minimum-results-for-search="Infinity" style="width:100%;">
                     </select>
                     <div class="form-text">
