Добавил возможность ставки по балансу пользователя

--- a/FootballMatchPredictor/Views/Bet/MakeBet.cshtml
+++ b/FootballMatchPredictor/Views/Bet/MakeBet.cshtml
@@ -33,7 +33,7 @@
 </div>
 
 <script>
-    initSelect2ForEnum({ url: '/Bet/GetPaymentMethods', selectId: 'paymentMethodToBetId', placeholder: 'Выберите платёжный метод', isModal: true });
+    initSelect2ForEnum({ url: '/Bet/GetPaymentMethodsToBet', selectId: 'paymentMethodToBetId', placeholder: 'Выберите платёжный метод', isModal: true });
 </script>
 
 
