--- a/FootballMatchPredictor/Views/Bet/WithdrawingMoney.cshtml
+++ b/FootballMatchPredictor/Views/Bet/WithdrawingMoney.cshtml
@@ -36,6 +36,6 @@
 
 
 <script>
-    initSelect2ForEnum({ url: '/Bet/GetPaymentMethods', selectId: 'paymentMethodId', placeholder: 'Выберите платёжный метод', isModal: true });
+    initSelect2ForEnum({ url: '/Bet/GetPaymentMethodsToWithDraw', selectId: 'paymentMethodId', placeholder: 'Выберите платёжный метод', isModal: true });
 </script>
 
